--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+     "target": "es5", // 指定 ECMAScript 版本
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"], // 要包含在编译中的依赖库文件列表
+    "allowJs": true,// 允许编译 JavaScript 文件
+    "skipLibCheck": true,// 跳过所有声明文件的类型检查
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,// 允许从没有默认导出的模块进行默认导入
+    "strict": true,// 启用所有严格类型检查选项
+    "forceConsistentCasingInFileNames": true, // 不允许对同一个文件使用不一致格式的引用
+    "module": "ESNext",// 指定模块代码生成
+    "moduleResolution": "Node",// 使用 Node.js 风格解析模块
+    "resolveJsonModule": true,// 允许使用 .json 扩展名导入的模块
     "isolatedModules": true,
-    "noEmit": true,
+    "noUnusedParameters": false, // 不报告未使用参数的错误
+    "noEmit": true,// 不输出(意思是不编译代码，只执行类型检查
+    "incremental": true, // 通过从以前的编译中读取/写入信息到磁盘上的文件来启用增量编译
     "jsx": "react-jsx"
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src/*" // *** TypeScript文件应该进行类型检查 ***
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": ["node_modules", "build"] // *** 不进行类型检查的文件 ***}
 }
