--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.22.5",
+    "less": "^4.1.3",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "vite-plugin-imp": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.3",
