--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8000",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "set NODE_ENV=development && vite",
+    "build": "set NODE_ENV=production &&tsc && vite build",
+    "preview": "set NODE_ENV=production vite preview"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "antd": "^4.22.5",
+    "babel-preset-mobx": "^2.0.0",
+    "eslint": "^8.22.0",
     "less": "^4.1.3",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,8 +26,20 @@
     "@types/node": "^18.7.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.8",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.10.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^27.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vite-plugin-eslint": "^1.8.0"
   }
 }
