--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,15 @@
     "noUnusedParameters": false, // 不报告未使用参数的错误
     "noEmit": true,// 不输出(意思是不编译代码，只执行类型检查
     "incremental": true, // 通过从以前的编译中读取/写入信息到磁盘上的文件来启用增量编译
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./",
+     "paths": {
+      "@/*": ["src/*"]
+    }, // 将 @/* 编译成 src/*
   },
   "include": [
-    "src/*" // *** TypeScript文件应该进行类型检查 ***
+    "**/*.tsx", "**/*.ts" // *** TypeScript文件应该进行类型检查 ***
   ],
   "references": [{ "path": "./tsconfig.node.json" }],
-  "exclude": ["node_modules", "build"] // *** 不进行类型检查的文件 ***}
+  "exclude": ["node_modules", "dist"] // *** 不进行类型检查的文件 ***}
 }
