--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,3 @@
 {
-  "presets":["@babel/preset-enb", "@babel/preset-react","mobx"]
+  "presets":["@babel/preset-env", "@babel/preset-react","mobx"]
 }
