--- a/package.json
+++ b/package.json
@@ -9,36 +9,42 @@
     "preview": "set NODE_ENV=production && vite preview"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "antd": "^4.22.5",
     "babel-preset-mobx": "^2.0.0",
-    "eslint": "^8.22.0",
-    "less": "^4.1.3",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
-    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.54.4",
-    "terser": "^5.14.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.3.0",
     "vite-plugin-imp": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-config": "^5.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-react": "^2.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.8",
+    "classnames": "^2.3.1",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
+    "less": "^4.1.3",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
+    "sass": "^1.54.4",
     "stylelint": "^14.10.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^27.0.0",
+    "terser": "^5.14.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vite-plugin-eslint": "^1.8.0"
